     visible.
 * WML engine:
   * add an "animate" key to the [teleport] event
   * add a resistance_anim block used whenever a unit uses a [resistance]
     ability on a neghbour
   * deprecated tag [debug_message]; use [wml_message] instead, which
     now offers the debug/dbg logger and uses the "wml" log domain
     (i.e. --log-*=wml should be used instead of --log-*=notifs).
   * the animate_unit action can now animate multiple units
   * the animate_unit action can now change the direction the unit is facing
     with a SLF
 * Miscellaneous and bug fixes:
   * Added the sunset feature to the new dialogs.
   * Fix the calculate feature in the test scenario.
   * Fix an endian issue which rendered text wrong on big endian machines.
   * Fix a bug with temporary objects not being removed at next scenario
   * Fix replays with empty starting positions.

Version 1.5.7:
 * Campaigns:
   * Descent into Darkness
     * Removed debris from this campaign's copy of the map of the
       Great Continent, and converted Parthyn's marker (which was black)
       to a brownish marker.
   * Eastern Invasion
     * Converted to the new gold carryover system.
     * Gave the undead flag to relevant sides.
     * Fixed Dacyn and Owaec not being loyal.
     * In 'Mal-Ravanal's Capital', reworked how the prisoner knights work: now
       they're placed on the map in cages with guards next to them, and the
       player must kill the guard to release the prisoner.
     * Removed debris from this campaign's map of the Great Continent,
       and converted all black markers to brownish markers.
   * Heir to the Throne
     * Added an idle animation for L2 Princess.
     * Fixed the dwarves attacking the player in 'The Lost General'.
     * In 'Bay of Pearls', the player receives recruitment of all lvl1 mermen
       units if both enemy leaders are defeated, and only Mermen Fighters if
       only one of them is.
     * Fixed not being able to recruit mermen in 'Isle of the Damned'.